--- a/notebooks/A_forward_propagation.ipynb
+++ b/notebooks/A_forward_propagation.ipynb
@@ -550,7 +550,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output probabilities: [0.22793645 0.77206355]\n"
+     ]
+    }
+   ],
    "source": [
     "# EXERCISE SOLUTION — NOT VISIBLE TO LEARNERS\n",
     "# This cell contains the reference solution and validation.\n",
@@ -623,14 +631,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Testing Your Implementation"
+    "### Testing Your Implementation\n",
+    "\n",
+    "If your implementation is correct, you will be able to run this cell successfully:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏁 Running all unit tests...\n",
+      "\n",
+      "🔍 Testing: linear_forward...\n",
+      "✅ linear_forward passed!\n",
+      "🔍 Testing: relu...\n",
+      "✅ relu passed!\n",
+      "🔍 Testing: softmax...\n",
+      "✅ softmax passed!\n",
+      "🔍 Testing: forward_pass...\n",
+      "✅ forward_pass passed!\n",
+      "\n",
+      "🎉 All tests completed!\n"
+     ]
+    }
+   ],
    "source": [
     "from exercise_validator import test_linear_forward, test_relu, test_softmax, test_forward\n",
     "\n",
