--- a/notebooks/A_forward_propagation.ipynb
+++ b/notebooks/A_forward_propagation.ipynb
@@ -644,11 +644,138 @@
     "test_forward(model)\n",
     "print(\"\\n🎉 All tests completed!\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Bonus: Extending the FCN to Handle Batches\n",
+    "\n",
+    "In this bonus task, you will extend your `SimpleFCN` class to support **batch inputs**.\n",
+    "\n",
+    "Currently, the network is designed to accept a single input vector $\\mathbf{x} \\in \\mathbb{R}^n$. However, in practical applications, we often process multiple inputs at once. A batch of inputs can be represented as a matrix $\\mathbf{X} \\in \\mathbb{R}^{\\text{batch\\_size} \\times n}$, where each row corresponds to a separate input example.\n",
+    "\n",
+    "### 👩‍💻 Your task:\n",
+    "\n",
+    "- Create a new class `BatchedFCN` that inherits from `SimpleFCN`.\n",
+    "- Reimplement the `linear_forward()` method to support matrix inputs.\n",
+    "- Modify the `forward()` method to handle a batch of inputs.\n",
+    "- Ensure that all operations — linear transformations, activations, and softmax — work correctly across the batch dimension.\n",
+    "\n",
+    "> 💡 Depending on how you implemented the `linear_forward` method in `SimpleFCN`, your code may already generalize to batch inputs. However, for clarity and structure, you are encouraged to explicitly adapt and test it in this context.\n",
+    "\n",
+    "You may assume that the input is a NumPy array of shape `(batch_size, input_dim)`, and the output should be of shape `(batch_size, output_dim)`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "class BatchedFCN(SimpleFCN):\n",
+    "    def linear_forward(self, W, X, b):\n",
+    "        \"\"\"\n",
+    "        Computes the linear transformation Z = XWᵀ + b for a batch of inputs.\n",
+    "        Parameters:\n",
+    "            W: weight matrix of shape (output_dim, input_dim)\n",
+    "            X: input matrix of shape (batch_size, input_dim)\n",
+    "            b: bias vector of shape (output_dim,)\n",
+    "        Returns:\n",
+    "            Z: output matrix of shape (batch_size, output_dim)\n",
+    "        \"\"\"\n",
+    "        # TODO: Implement the batched linear transformation\n",
+    "        Z = None # your code here\n",
+    "        return Z\n",
+    "\n",
+    "    def forward(self, X_batch):\n",
+    "        \"\"\"\n",
+    "        Forward pass for a batch of inputs.\n",
+    "        Parameters:\n",
+    "            X_batch: shape (batch_size, input_dim)\n",
+    "        Returns:\n",
+    "            Y: output probabilities for each input in the batch,\n",
+    "               shape (batch_size, output_dim)\n",
+    "        \"\"\"\n",
+    "        # TODO: Reuse linear_forward, ReLU, and softmax for a batch\n",
+    "        z1 = None # your code here\n",
+    "        a1 = None # your code here\n",
+    "        z2 = None # your code here\n",
+    "        Y = None # your code here\n",
+    "        return Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EXERCISE SOLUTION — NOT VISIBLE TO LEARNERS\n",
+    "# This cell contains the reference solution and validation.\n",
+    "# It should be used for instructor/testing purposes only.\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "class BatchedFCN(SimpleFCN):\n",
+    "    def linear_forward(self, W, X, b):\n",
+    "        \"\"\"\n",
+    "        Computes the linear transformation Z = XWᵀ + b for a batch of inputs.\n",
+    "        Parameters:\n",
+    "            W: weight matrix of shape (output_dim, input_dim)\n",
+    "            X: input matrix of shape (batch_size, input_dim)\n",
+    "            b: bias vector of shape (output_dim,)\n",
+    "        Returns:\n",
+    "            Z: output matrix of shape (batch_size, output_dim)\n",
+    "        \"\"\"\n",
+    "        # TODO: Implement the batched linear transformation\n",
+    "        Z = np.dot(X,W.transpose())+b # your code here\n",
+    "        return Z\n",
+    "\n",
+    "    def forward(self, X_batch):\n",
+    "        \"\"\"\n",
+    "        Forward pass for a batch of inputs.\n",
+    "        Parameters:\n",
+    "            X_batch: shape (batch_size, input_dim)\n",
+    "        Returns:\n",
+    "            Y: output probabilities for each input in the batch,\n",
+    "               shape (batch_size, output_dim)\n",
+    "        \"\"\"\n",
+    "        # TODO: Reuse linear_forward, ReLU, and softmax for a batch\n",
+    "        z1 = self.linear_forward(self.W1,X_batch,self.b1) # your code here\n",
+    "        a1 = self.relu(z1) # your code here\n",
+    "        z2 = self.linear_forward(self.W2,X_batch,self.b2) # your code here\n",
+    "        Y = np.apply_along_axis(self.softmax, axis=1, arr=z2) # your code here\n",
+    "        return Y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing Your Implementation\n",
+    "\n",
+    "If your implementation is correct, you will be able to run this cell successfully:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from exercise_validator import test_batched_forward\n",
+    "\n",
+    "model = BatchedFCN()\n",
+    "test_batched_forward(model)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "torchenv",
    "language": "python",
    "name": "python3"
   },
@@ -662,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
